<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">boleta-calendario</string>
    <string name="button1">Escanear boleta</string>
    <string name="button2">Ver calendario</string>
    <string name="button3">Configuracion</string>
    
    <string name="conf_button1">Tiempo de recordatorio</string>
    <string name="conf_button2">Tiempo de duracion</string>
    <string name="conf_button3">Color evento</string>
    <string name="check_alarm">Habilita futuras alarmas</string>
    
    <string name="conf_back">Volver</string>
    
</resources>
